# benchmark-comparison

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  Dockerfile  LICENSE.txt  README.md  README.rst  collect_node-density.sh  gen_averages.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
config/: README.md  apiCalls_3-buckets.json  apiCalls_4-buckets.json  apirequestrate_verb.json  clair-vegeta.json  csi-touchstone.json  etcd_distribution.json  kubeburner-control-plane.json  kubeburner-node-density.json  kubeburner.json  mb.json  memory-metrics.json  metadata.json  node-status.json  ocm-requests.json  pgbench.json  podLatency_distribution.json  podReady_fullDistribution.json  quay-push-pull-index.json  quay-vegeta.json  scale_uperf.json  serviceSyncLatency.json  uperf.json  vegeta.json  ycsb.json
examples/: kubeburner.json  mb.json  metadata.json  pgbench.json  scale_uperf.json  uperf.json  vegeta.json  ycsb.json
src/touchstone/: OCM-benchmark test(1).py  compare.py
src/touchstone/benchmarks/: __init__.py  base_benchmark.py  generic.py  kubeburner.py  mb.py  pgbench.py  scaledata.py  uperf.py  vegeta.py  ycsb.py
src/touchstone/databases/: __init__.py  base_database.py  elasticsearch.py  prom_config.yaml  prometheus.py
src/touchstone/decision_maker/: __init__.py
src/touchstone/utils/: __init__.py  lib.py  metadata.json  t_test.py  temp.py
tolerancy-configs/: mb.yaml  uperf.yaml
