# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = touchstone
description = To compare benchmark results in elasticsearch
author = aakarshg
author_email = aakarsh.g2012@gmail.com
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = elasticsearch==7.10.0; elasticsearch_dsl==7.3.0; tabulate; pyyaml
# tests_require = pytest; pytest-cov
python_requires=>=3.6,

[options.packages.find]
where = src

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install touchstone[PDF]` like:
# PDF = ReportLab; RXP

[options.entry_points]
# Add here console scripts like:
console_scripts =
    touchstone_compare = touchstone.compare:render

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1
